# wasmex-wasmtime

./: .gitignore  CHANGELOG.md  README.md  mix.exs
.github/: dependabot.yml
.github/workflows/: release.yaml  rust-ci.yaml
lib/: wasmex_wasmtime.ex
lib/wasmex/: native.ex
lib/wasmex_wasmtime/: callback_token.ex  instance.ex  memory.ex  module.ex  native.ex  pipe.ex  store.ex  store_or_caller.ex
lib/wasmex_wasmtime/wasi/: preopen_options.ex  wasi_options.ex
native/wasmex/: Cargo.toml
native/wasmex/src/: environment.rs  instance.rs  memory.rs  module.rs
native/wasmex_wasmtime/: Cargo.toml  README.md
native/wasmex_wasmtime/src/: atoms.rs  caller.rs  environment.rs  functions.rs  instance.rs  lib.rs  memory.rs  module.rs  pipe.rs  store.rs
test/: test_helper.exs  wasi_test.exs  wasmex_wasmtime_test.exs
test/wasm_import_test/: Cargo.toml
test/wasmex_wasmtime/: instance_test.exs  memory_test.exs  module_test.exs  pipe_test.exs
