[package]
name = "wasmex_wasmtime"
version = "0.1.0"
authors = ["Philipp Tessenow <philipp@tessenow.org>"]
description = "Elixir extension to run WebAssembly binaries through wasmtime"
readme = "README.md"
repository = "https://github.com/tessi/wasmex-wasmtime"
keywords = ["elixir", "extension", "webassembly", "wasmtime"]
categories = ["wasm"]
edition = "2021"

[lib]
name = "wasmex_wasmtime"
path = "src/lib.rs"
crate-type = ["dylib"]

[dependencies]
rustler = "0.25.0"
lazy_static = "1.4"
wasmer = "2.2.1"
wasmer-vm = "2.1.1"
wasmer-wasi = "2.2.1"
serde = "1.0.137"
typetag = "0.1.8"
