[package]
name = "wasmex_wasmtime"
version = "0.1.0"
authors = ["Philipp Tessenow <philipp@tessenow.org>"]
description = "Elixir extension to run WebAssembly binaries through wasmtime"
readme = "README.md"
repository = "https://github.com/tessi/wasmex-wasmtime"
keywords = ["elixir", "extension", "webassembly", "wasmtime"]
categories = ["wasm"]
edition = "2021"

[lib]
name = "wasmex_wasmtime"
path = "src/lib.rs"
crate-type = ["dylib"]

[dependencies]
rustler = "0.25.0"
once_cell = "1.13.1"
rand = "0.8.5"
serde = "1.0.144"
typetag = "0.2.1"
wasmtime = "0.39.1"
wasmtime-wasi = "0.39.1"
wasi-common = "0.39.1"
wiggle = "0.39.1"
wat = "1.0.46"
