[package]
name = "wasmex_wasmtime"
version = "0.1.0"
authors = ["Philipp Tessenow <philipp@tessenow.org>"]
description = "Elixir extension to run WebAssembly binaries through wasmtime"
readme = "README.md"
repository = "https://github.com/tessi/wasmex-wasmtime"
keywords = ["elixir", "extension", "webassembly", "wasmtime"]
categories = ["wasm"]
edition = "2021"

[lib]
name = "wasmex_wasmtime"
path = "src/lib.rs"
crate-type = ["dylib"]

[dependencies]
cap-primitives = "0.26.0"
rustler = "0.26.0"
once_cell = "1.15.0"
rand = "0.8.5"
serde = "1.0.145"
typetag = "0.2.3"
# wasmtime = "1.0.1"
wasmtime = { git = "https://github.com/tessi/wasmtime", version = "3.0.0"}
# wasmtime-wasi = "1.0.1"
wasmtime-wasi = { git = "https://github.com/tessi/wasmtime", version = "3.0.0"}
# wasi-common = "1.0.1"
wasi-common = { git = "https://github.com/tessi/wasmtime", version = "3.0.0"}
# wiggle = "1.0.1"
wiggle = { git = "https://github.com/tessi/wasmtime", version = "3.0.0"}
wat = "1.0.50"
